<resources>
    <string name="app_name">Quize</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="chooseTopic">Choose Topic</string>
    <string name="RadioButtonTopicChoose1">Java</string>
    <string name="RadioButtonTopicChoose2">Kotlin</string>
    <string name="RadioButtonTopicChoose3">SDK Android</string>
    <string name="RadioButtonTopicChoose4">Random</string>
    <string name="start">Start Game</string>
    <string name="Statistic">Statistic</string>
    <string name="AnswerTrue">True</string>
    <string name="AnswerFalse">False</string>
    <string name="title_activity_actyvity_statistic">Actyvity_statistic</string>
</resources>
